--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
                                                 irrespective of location.</p>
                                                 <a class="button-28" role="button" href="https://drive.google.com/file/d/1tdzYQikQ7gWdEX9eGjAqWyUQIKbg6Lf6/view?usp=sharing" target="_blank" rel="noopener noreferrer">View Slide Deck</a> 
                                         </div>
-                                        <img class="img-fluid" src="reu12th/reubenabdul/main/assets/handyhublogo.png" alt="handyhublogo" />
+                                        <img class="img-fluid" src="https://raw.githack.com/reu12th/reubenabdul/main/assets/handyhublogo.png" alt="handyhublogo" />
                                     </div>
                                 </div>
                             </div>
