--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content="A collaborative software engineer who partners with exceptionally talented creatives and forward-thinking brands to craft exquisite creations." />
+        <meta name="author" content="Reuben Abdul" />
         <title>Reuben Abdul - Software Engineer</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
